Co-ordinates now show the actual co-ordinates instead of scaled ones

--- a/graph_plotter.html
+++ b/graph_plotter.html
@@ -10,6 +10,7 @@
 
 <body>
 	<h1>Graph Plotter</h1>
+	<h2>Made using HTML5 and CANVAS API</h2>
 	<canvas width="1000" height="600" id="canvas"></canvas>
 </body>
 <script src="plot_graphs.js"></script>
