--- a/graph_plotter.html
+++ b/graph_plotter.html
@@ -6,13 +6,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Graph Plotter</title>
 	<link rel="stylesheet" href="style.css" />
+	<style>
+		img {
+			height: 25px;
+			width: 25px;
+			margin-bottom: -3px;
+		}
+	</style>
 </head>
 
 <body>
 	<h1>Graph Plotter</h1>
-	<h2>Made using HTML5 and CANVAS API</h2>
+	<h2>Made using HTML5 and CANVAS API <br><br> (pure Vanilla Javacsript!)</h2>
 	<canvas width="1000" height="600" id="canvas"></canvas>
 </body>
+<footer>
+	<p>
+		Made with <img src="assets/love-and-romance.svg" alt="heart"> by
+		<a href="http://github.com/mehulambastha">Mehul Ambastha</a>
+	</p>
+</footer>
 <script src="plot_graphs.js"></script>
 
 </html>
