Basic design improvements

--- a/graph_plotter.html
+++ b/graph_plotter.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" href="style.css" />
 	<style>
 		img {
-			height: 25px;
-			width: 25px;
-			margin-bottom: -3px;
+			height: 30px;
+			width: 30px;
+			margin-bottom: -5px;
 		}
 	</style>
 </head>
@@ -22,7 +22,7 @@
 </body>
 <footer>
 	<p>
-		Made with <img src="assets/love-and-romance.svg" alt="heart"> by
+		Made with <img src="assets/love-and-romance.svg" alt="heart"> and <img src="assets/brain.svg" alt="brain"> by
 		<a href="http://github.com/mehulambastha">Mehul Ambastha</a>
 	</p>
 </footer>
